force-app/main/default/objects/Appointment__c/fields/CaseworkerEmail__c.field-meta.xml
<CustomField>
    <fullName>CaseworkerEmail__c</fullName>
    <label>Caseworker Email</label>
    <type>Email</type>
</CustomField>