force-app/main/default/objects/Appointment__c/fields/CaseworkerFirstName__c.field-meta.xml
<CustomField>
    <fullName>CaseworkerFirstName__c</fullName>
    <formula>Service__r.Caseworker__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caseworker First Name</label>
    <type>Text</type>
</CustomField>