force-app/main/default/objects/Appointment__c/fields/CaseworkerName__c.field-meta.xml
<CustomField>
    <fullName>CaseworkerName__c</fullName>
    <formula>Service__r.CaseworkerName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caseworker Name</label>
    <type>Text</type>
</CustomField>