force-app/main/default/objects/Appointment__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Date__c)), NOT(ISBLANK(TEXT(Time__c))))  , TEXT(Date__c) &amp; &apos; / &apos; &amp;  TEXT(Time__c),  IF(NOT(ISBLANK(TEXT(Time__c))), TEXT(Time__c),  IF(NOT(ISBLANK(Date__c)), TEXT(Date__c), &apos;No date or time specified&apos;)))</formula>
    <label>Date/Time</label>
    <type>Text</type>
</CustomField>