force-app/main/default/objects/Appointment__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <formula>if(ISBLANK( Service__c ), &quot;Open &quot; &amp;  ServiceType__c,  Service__r.Display_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>