force-app/main/default/objects/Appointment__c/fields/LocationAddress__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress__c</fullName>
    <formula>Service__r.Location__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Address</label>
    <type>Text</type>
</CustomField>