force-app/main/default/objects/Appointment__c/fields/LocationURL__c.field-meta.xml
<CustomField>
    <fullName>LocationURL__c</fullName>
    <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=&quot; &amp;  (Service__r.Location__r.Address__c + Service__r.Location__r.Country__c) ,&quot;Click here to see the location&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location URL</label>
    <type>Text</type>
</CustomField>