force-app/main/default/objects/Appointment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>(optional, not shared with client or caseworker)</description>
    <inlineHelpText>(optional, not shared with client or caseworker)</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>