force-app/main/default/objects/Appointment__c/fields/SendEmailNotificationToCaseworker__c.field-meta.xml
<CustomField>
    <fullName>SendEmailNotificationToCaseworker__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Email Notification to Caseworker</label>
    <type>Checkbox</type>
</CustomField>