force-app/main/default/objects/Appointment__c/fields/SendTextMessageToClient__c.field-meta.xml
<CustomField>
    <fullName>SendTextMessageToClient__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Text Message Notification to Client</label>
    <type>Checkbox</type>
</CustomField>