force-app/main/default/objects/Appointment__c/fields/TagColor__c.field-meta.xml
<CustomField>
    <fullName>TagColor__c</fullName>
    <label>Tag Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>