force-app/main/default/objects/Appointment__c/fields/Web_Portal_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Request_ID__c</fullName>
    <label>Web Portal Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>