force-app/main/default/objects/Appointment__c/validationRules/BlockAppointmentCreationByScheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockAppointmentCreationByScheduled</fullName>
    <active>false</active>
    <errorConditionFormula>AND( TEXT(Status__c) = &apos;Scheduled&apos; ,  Service__r.NumberOfScheduledAppointments__c &gt; 0,  ISNEW() )</errorConditionFormula>
    <errorMessage>There are already an appointment scheduled for this request...</errorMessage>
</ValidationRule>