force-app/main/default/objects/Appointment__c/listViews/Imported_Appointments.listView-meta.xml
<ListView>
    <fullName>Imported_Appointments</fullName>
    <columns>NAME</columns>
    <columns>DisplayName__c</columns>
    <columns>DateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Service__c</columns>
    <columns>Web_Portal_ID__c</columns>
    <columns>Web_Portal_Request_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Web_Portal_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Imported Appointments</label>
</ListView>