force-app/main/default/objects/Appointment__c/listViews/Open_Delivery.listView-meta.xml
<ListView>
    <fullName>Open_Delivery</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>DisplayName__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service__c</field>
        <operation>equals</operation>
    </filters>
    <label>Open Delivery</label>
</ListView>