force-app/main/default/objects/Appointment__c/listViews/Open_Will_Call.listView-meta.xml
<ListView>
    <fullName>Open_Will_Call</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>DisplayName__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service__c</field>
        <operation>equals</operation>
    </filters>
    <label>Open Will Call</label>
</ListView>