force-app/main/default/objects/Appointment__c/listViews/Today_s_Appointments.listView-meta.xml
<ListView>
    <fullName>Today_s_Appointments</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Appointments</label>
</ListView>