force-app/main/default/objects/Appointment__c/listViews/Todays_Appointments.listView-meta.xml
<ListView>
    <fullName>Todays_Appointments</fullName>
    <columns>DisplayName__c</columns>
    <columns>Time__c</columns>
    <columns>Notes__c</columns>
    <columns>Service__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>8/18/2022</value>
    </filters>
    <label>Todays Appointments (Volunteer Shopper)</label>
</ListView>